2004-09-21 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Test/CMakeLists.txt: update to follow gdcmData renamings.
  * src/gdcmCommon.h, gdcmDocument.cxx: doxygen typos

2004-09-17 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * ENH: added some utility method that builds a flat dictionnary
    holding all the Dicom entries contained in the recursive structure
    of a gdcmElementSet. Refer to add FlatHashTablePrint.cxx for 
    an example of usage.
    - src/gdcmDocument.[h|cxx] added BuildFlatHashTableRecurse() and
      BuildFlatHashTable() that build a flat dictionary.
    - src/gdcmElementSet.h: added a new private GetTag() accessor.
      gdcmDocument is now a friend of gdcmElementSet.
    - src/gdcmElementSet.cxx: clean up.
    - Example/FlatHashTablePrint.cxx added.
    - Example/CmakeLists.txt changed accordingly

2004-09-16 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * gdcmDocEntrySet::SQDepthLevel and gdcmDocEntrySet::BaseTagKey attributes
    moved away from gdcmDocEntrySet (since this class is an abstract class
    acting like an interface). SQDepthLevel and BaseTagKey are now
    in class 
    - src/gdcmDocEntrySet.[h|cxx] removal of SQDepthLevel and BaseTagKey
      and associated accessors. Doxygenation of the class.
    - src/gdcmSQItem.[h|cxx] SQDepthLevel and BaseTagKey and associated
      accessors added.
    - src/gdcmSeqEntry.[h|cxx]: constructor doesn't handle depth anymore.
      Use SQDepthLevel accessor instead. ::Print() adapted.
    - src/gdcmElementSet.cxx changed according to changes in gdcmSeqEntry.
    - src/gdcmDocument.cxx changed accordingly.

2004-09-13 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Preparation of writing a gdcmHeader iterator: generalisation of gdcmTagKey
    - The following is the doxygen comment of the typedef declaration
      of gdcmagKey in src/gdcmCommon.h:
           gdcmTagKey is made to old an "universal" (as in URL, Universal
           Ressource Locator)  key to a gdcmDocEntry i.e. a dicom tag.